--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "cuckoo-filter",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "description": "Cuckoo Filter: Better Than Bloom",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "discard": "git reset --hard && git clean -f -d"
   },
-  "author": "Vijayee Kulkaa",
+  "author": "Victor Morrow",
   "license": "ISC",
   "repository": {
     "type": "git",
@@ -16,12 +16,13 @@
   "dependencies": {
     "arraybuffer-to-buffer": "0.0.4",
     "cbor-js": "^0.1.0",
-    "fnv-plus": "^1.2.12",
+    "fnv32": "0.0.1",
     "to-array-buffer": "^1.2.0",
     "typedarray-to-buffer": "^3.1.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "elapsed-time": "0.0.1",
     "mocha": "^3.0.2"
   }
 }
