--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cuckoo Filter: Better Than Bloom",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/mocha/bin/mocha",
     "discard": "git reset --hard && git clean -f -d"
   },
   "author": "Victor Morrow",
