--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cuckoo-filter",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Cuckoo Filter: Better Than Bloom",
   "main": "src/index.js",
   "scripts": {
@@ -14,11 +14,8 @@
     "url": "https://github.com/vijayee/cuckoo-filter.git"
   },
   "dependencies": {
-    "arraybuffer-to-buffer": "0.0.4",
     "cbor-js": "^0.1.0",
-    "fnv32": "0.0.1",
-    "to-array-buffer": "^1.2.0",
-    "typedarray-to-buffer": "^3.1.2"
+    "fnv32": "0.0.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
