--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cuckoo-filter",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Cuckoo Filter: Better Than Bloom",
   "main": "src/index.js",
   "scripts": {
@@ -14,7 +14,7 @@
     "url": "https://github.com/vijayee/cuckoo-filter.git"
   },
   "dependencies": {
-    "cbor-js": "^0.1.0",
+    "borc": "2.0.4",
     "fnv32": "0.0.1"
   },
   "devDependencies": {
