--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.3",
   "description": "Cuckoo Filter: Better Than Bloom",
   "main": "src/index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha",
     "discard": "git reset --hard && git clean -f -d"
